--- a/punto1.html
+++ b/punto1.html
@@ -1,22 +1,69 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <style>
-    .cuadro {
-      border: 1px solid black;
-      padding: 10px;
-      box-sizing: border-box;
-    }
-  </style>
-</head>
 <body>
-  <div class="cuadro">
-    <h1>El Ártico ha perdido el 14% de su hielo marino perenne en un solo año</h1>
-    <strong>WASHINGTON.</strong>-El hielo perenne del Ártico se redujo en un 14% entre 2004 y 2005, al perder <strong>720.000 kilómetros cuadrados</strong>, una superficie superior a la Península Ibérica, según datos de la <u class="dotted">NASA</u>.
-    <p>Según el <u class="dotted">JPL</u>, la pérdida del hielo perenne, que debiera mantenerse durante todo el verano, fue todavía mayor y se acercó a un 50% en el momento en que ese hielo se desplazaba desde el Ártico oriental hacia el oeste.</p>
-    <strong>Son Nghiem</strong>, investigador del <u class="dotted">JPL</u>, ha declarado que:
-    <p><i><blockquote>"Los cambios registrados en esos años en el hielo ártico son rápidos y espectaculares. De mantenerse la situación, ésta tendrá un impacto profundo en el ambiente, así como en el transporte marino y el comercio."</blockquote></i></p>
-  </div>
-</body>
-</html>
 
+ <style>
+  
+  .enlace-cuadrado {
+      display: inline-block;
+      padding: 5px;
+      width: auto;
+      height: auto;
+      text-align: center;
+      border: 2px solid black;
+      background-color: White;
+      text-decoration: none;
+      color: black;
+    }
+
+  
+ body {
+    background-color: #FFB6C1 ;
+  }
+
+ .dotted-underline {
+    text-decoration: underline dotted;
+  }
+
+  .texto-limitado {
+    max-width: 450px;
+    margin: 0 auto; 
+  }
+</style>
+
+<div class="texto-limitado">
+  <p style="font-size: 24px;"><strong>El Ártico ha perdido el 14% de su hielo
+marino perenne en un solo año </p>
+</strong>
+
+<p style="font-size: 20px;"> <strong>WASHINGTON.</strong>- El hielo perenne del Ártico se
+redujo en un 14% entre 2004 y 2005, al perder
+720.000 kilómetros cuadrados, una superficie superior
+a la Península Ibérica, según datos de la <span class="dotted-underline">NASA</span></p>
+
+
+
+
+<p>Según el <span class="dotted-underline">JPL</span>, la pérdida del hielo perenne,
+que debiera mantenerse durante todo el verano, fue todavía
+mayor y se acercó a un 50% en el momento en que ese
+hielo se desplazaba desde el Ártico oriental hacia el oeste.
+
+<br></br>
+
+<strong>Son Nghiem</strong>, investigador del 
+<span class="dotted-underline">JPL</span> ha declarado que:
+
+<br></br>
+
+<em>"Los cambios registrados en esos años en el hielo ártico son
+rápidos y espectaculares. De mantenerse la situación, ésta tendrá
+un impacto "profundo en el ambiente, así como en el transporte
+marino y el comercio."</em>
+ 
+ </br></br>
+        </br></br>
+        <a href="https://ClaMiGeSuL.github.io/ejerciciosdehtml2/index.html" class="enlace-cuadrado" >volver</a>
+        </br></br>
+</body>
+
+</html>
