--- a/punto1.html
+++ b/punto1.html
@@ -62,7 +62,7 @@ marino y el comercio."</em>
  
  </br></br>
         </br></br>
-        <a href="https://ClaMiGeSuL.github.io/ejerciciosdehtml2/index.html" class="enlace-cuadrado" >volver</a>
+        <a href="https://ClaMiGeSuL.github.io/ejerciciosdehtml2/index.html" >volver</a>
         </br></br>
 </body>
 
