--- a/punto2 index.html
+++ b/punto2 index.html
@@ -16,5 +16,12 @@
     <li><a href="https://static.wikia.nocookie.net/plantsvszombies/images/1/12/Potato_Mine_HD.png/revision/latest/scale-to-width-down/185?cb=20200409183217">Ver imagen</a></li>
   </ul>
 </body>
+
+   </br></br>
+        </br></br>
+        <a href="https://ClaMiGeSuL.github.io/ejerciciosdehtml2/index.html" >volver</a>
+        </br></br>
+</body>
+
 </html>
 
