--- a/punto2 pagina2.html
+++ b/punto2 pagina2.html
@@ -12,5 +12,12 @@
     <li><a href="index.html">Volver a la Página 1</a></li>
   </ul>
 </body>
+
+   </br></br>
+        </br></br>
+        <a href="https://ClaMiGeSuL.github.io/ejerciciosdehtml2/index.html" >volver</a>
+        </br></br>
+</body>
+
 </html>
 
