--- a/punto2 index.html
+++ b/punto2 index.html
@@ -9,7 +9,7 @@
 
   <h2>Enlaces</h2>
   <ul>
-    <li><a href="https://clamigesul.github.io/ejerciciosdehtml2/punto2%pagina2.html">Ir a la Sección 2</a></li>
+    <li><a href="https://clamigesul.github.io/ejerciciosdehtml2/punto2%20pagina2.html">Ir a la Sección 2</a></li>
 <br>
     <li><a href="https://www.google.com.ar">Ir a Google</a></li>
 <br>
