--- a/punto2 pagina2.html
+++ b/punto2 pagina2.html
@@ -9,7 +9,7 @@
 
   <h2>Enlaces</h2>
   <ul>
-    <li><a href="index.html">Volver a la Página 1</a></li>
+    <li><a href="https://ClaMiGeSuL.github.io/ejerciciosdehtml2/punto2%20index.html">Volver a la Página 1</a></li>
   </ul>
 </body>
 
